# super-disco

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE
.github/workflows/: install_dependencies.sh  run.yml
src/: main.cpp
